Require customer ID as path param for updating
Remove redundant DTO with ID from mock test class.
Check for missing ID in controller and return bad request if not present.
Service will check to verify updated customer exists before updating.
Add mocked test case for non-present customer on update.
Move DTO to separate package (will add more later).
Remove redundant/unused test objects in mock controller tests.